--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,14 @@
 <html>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <title>Ping Pong</title>
+    <title>Journal</title>
   </head>
   <body>
-    <form id="ping-pong-form">
-      <label for="goal">Enter a number:</label>
-      <input id="goal" type="number">
+    <form id="journal-form">
+      <label for="title">Enter a title for your journal entry:</label>
+      <input id="title" type="text">
+      <label for="body">Journal entry:</label>
+      <input id="body" type="text">
       <button type="submit">Submit</button>
     </form>
     <ul id="solution"></ul>
